--- a/translation/tsconfig.json
+++ b/translation/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES6",
     "lib": ["ESNext"],
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "noEmit": true,
     "strict": true
